// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EntityTableToolbar DOM should render correctly - no data 1`] = `
<PrimaryToolbar
  actionsConfig={null}
  activeFiltersConfig={
    Object {
      "filters": Array [
        Object {
          "category": "Status",
          "chips": Array [
            Object {
              "name": "Fresh",
              "value": "fresh",
            },
            Object {
              "name": "Stale",
              "value": "stale",
            },
          ],
          "type": "staleness",
        },
        Object {
          "category": "Source",
          "chips": Array [
            Object {
              "name": "Insights",
              "value": "insights",
            },
          ],
          "type": "registered_with",
        },
      ],
      "onDelete": [Function],
    }
  }
  className="ins-c-inventory__table--toolbar "
  filterConfig={
    Object {
      "isDisabled": false,
      "items": Array [
        Object {
          "filterValues": Object {
            "isDisabled": false,
            "onChange": [Function],
            "placeholder": "Filter by name",
            "value": "",
          },
          "label": "Name",
          "value": "name-filter",
        },
        Object {
          "filterValues": Object {
            "isDisabled": false,
            "items": Array [
              Object {
                "label": "Fresh",
                "value": "fresh",
              },
              Object {
                "label": "Stale",
                "value": "stale",
              },
              Object {
                "label": "Stale warning",
                "value": "stale_warning",
              },
            ],
            "onChange": [Function],
            "placeholder": "Filter by status",
            "value": Array [
              "fresh",
              "stale",
            ],
          },
          "label": "Status",
          "type": "checkbox",
          "value": "stale-status",
        },
        Object {
          "filterValues": Object {
            "isDisabled": false,
            "items": Array [
              Object {
                "label": "RHEL 9.0",
                "value": "9.0",
              },
              Object {
                "label": "RHEL 8.6",
                "value": "8.6",
              },
              Object {
                "label": "RHEL 8.5",
                "value": "8.5",
              },
              Object {
                "label": "RHEL 8.4",
                "value": "8.4",
              },
              Object {
                "label": "RHEL 8.3",
                "value": "8.3",
              },
              Object {
                "label": "RHEL 8.2",
                "value": "8.2",
              },
              Object {
                "label": "RHEL 8.1",
                "value": "8.1",
              },
              Object {
                "label": "RHEL 8.0",
                "value": "8.0",
              },
              Object {
                "label": "RHEL 7.9",
                "value": "7.9",
              },
              Object {
                "label": "RHEL 7.8",
                "value": "7.8",
              },
              Object {
                "label": "RHEL 7.7",
                "value": "7.7",
              },
              Object {
                "label": "RHEL 7.6",
                "value": "7.6",
              },
              Object {
                "label": "RHEL 7.5",
                "value": "7.5",
              },
              Object {
                "label": "RHEL 7.4",
                "value": "7.4",
              },
              Object {
                "label": "RHEL 7.3",
                "value": "7.3",
              },
              Object {
                "label": "RHEL 7.2",
                "value": "7.2",
              },
              Object {
                "label": "RHEL 7.1",
                "value": "7.1",
              },
              Object {
                "label": "RHEL 7.0",
                "value": "7.0",
              },
              Object {
                "label": "RHEL 6.10",
                "value": "6.10",
              },
              Object {
                "label": "RHEL 6.9",
                "value": "6.9",
              },
              Object {
                "label": "RHEL 6.8",
                "value": "6.8",
              },
              Object {
                "label": "RHEL 6.7",
                "value": "6.7",
              },
              Object {
                "label": "RHEL 6.6",
                "value": "6.6",
              },
              Object {
                "label": "RHEL 6.5",
                "value": "6.5",
              },
              Object {
                "label": "RHEL 6.4",
                "value": "6.4",
              },
              Object {
                "label": "RHEL 6.3",
                "value": "6.3",
              },
              Object {
                "label": "RHEL 6.2",
                "value": "6.2",
              },
              Object {
                "label": "RHEL 6.1",
                "value": "6.1",
              },
              Object {
                "label": "RHEL 6.0",
                "value": "6.0",
              },
            ],
            "onChange": [Function],
            "placeholder": "Filter by operating system",
            "value": undefined,
          },
          "label": "Operating System",
          "type": "checkbox",
          "value": "operating-system",
        },
        Object {
          "filterValues": Object {
            "isDisabled": false,
            "items": Array [
              Object {
                "label": "Insights",
                "value": "insights",
              },
            ],
            "onChange": [Function],
            "placeholder": "Filter by source",
            "value": Array [
              "insights",
            ],
          },
          "label": "Source",
          "type": "checkbox",
          "value": "source-registered-with",
        },
      ],
    }
  }
  filters={Array []}
  pagination={
    <Skeleton
      isDark={false}
      size="lg"
    />
  }
/>
`;

exports[`EntityTableToolbar DOM should render correctly - with children 1`] = `
<PrimaryToolbar
  activeFiltersConfig={
    Object {
      "filters": Array [
        Object {
          "category": "Status",
          "chips": Array [
            Object {
              "name": "Fresh",
              "value": "fresh",
            },
            Object {
              "name": "Stale",
              "value": "stale",
            },
          ],
          "type": "staleness",
        },
        Object {
          "category": "Source",
          "chips": Array [
            Object {
              "name": "Insights",
              "value": "insights",
            },
          ],
          "type": "registered_with",
        },
      ],
      "onDelete": [Function],
    }
  }
  className="ins-c-inventory__table--toolbar "
  filterConfig={
    Object {
      "isDisabled": false,
      "items": Array [
        Object {
          "filterValues": Object {
            "isDisabled": false,
            "onChange": [Function],
            "placeholder": "Filter by name",
            "value": "",
          },
          "label": "Name",
          "value": "name-filter",
        },
        Object {
          "filterValues": Object {
            "isDisabled": false,
            "items": Array [
              Object {
                "label": "Fresh",
                "value": "fresh",
              },
              Object {
                "label": "Stale",
                "value": "stale",
              },
              Object {
                "label": "Stale warning",
                "value": "stale_warning",
              },
            ],
            "onChange": [Function],
            "placeholder": "Filter by status",
            "value": Array [
              "fresh",
              "stale",
            ],
          },
          "label": "Status",
          "type": "checkbox",
          "value": "stale-status",
        },
        Object {
          "filterValues": Object {
            "isDisabled": false,
            "items": Array [
              Object {
                "label": "RHEL 9.0",
                "value": "9.0",
              },
              Object {
                "label": "RHEL 8.6",
                "value": "8.6",
              },
              Object {
                "label": "RHEL 8.5",
                "value": "8.5",
              },
              Object {
                "label": "RHEL 8.4",
                "value": "8.4",
              },
              Object {
                "label": "RHEL 8.3",
                "value": "8.3",
              },
              Object {
                "label": "RHEL 8.2",
                "value": "8.2",
              },
              Object {
                "label": "RHEL 8.1",
                "value": "8.1",
              },
              Object {
                "label": "RHEL 8.0",
                "value": "8.0",
              },
              Object {
                "label": "RHEL 7.9",
                "value": "7.9",
              },
              Object {
                "label": "RHEL 7.8",
                "value": "7.8",
              },
              Object {
                "label": "RHEL 7.7",
                "value": "7.7",
              },
              Object {
                "label": "RHEL 7.6",
                "value": "7.6",
              },
              Object {
                "label": "RHEL 7.5",
                "value": "7.5",
              },
              Object {
                "label": "RHEL 7.4",
                "value": "7.4",
              },
              Object {
                "label": "RHEL 7.3",
                "value": "7.3",
              },
              Object {
                "label": "RHEL 7.2",
                "value": "7.2",
              },
              Object {
                "label": "RHEL 7.1",
                "value": "7.1",
              },
              Object {
                "label": "RHEL 7.0",
                "value": "7.0",
              },
              Object {
                "label": "RHEL 6.10",
                "value": "6.10",
              },
              Object {
                "label": "RHEL 6.9",
                "value": "6.9",
              },
              Object {
                "label": "RHEL 6.8",
                "value": "6.8",
              },
              Object {
                "label": "RHEL 6.7",
                "value": "6.7",
              },
              Object {
                "label": "RHEL 6.6",
                "value": "6.6",
              },
              Object {
                "label": "RHEL 6.5",
                "value": "6.5",
              },
              Object {
                "label": "RHEL 6.4",
                "value": "6.4",
              },
              Object {
                "label": "RHEL 6.3",
                "value": "6.3",
              },
              Object {
                "label": "RHEL 6.2",
                "value": "6.2",
              },
              Object {
                "label": "RHEL 6.1",
                "value": "6.1",
              },
              Object {
                "label": "RHEL 6.0",
                "value": "6.0",
              },
            ],
            "onChange": [Function],
            "placeholder": "Filter by operating system",
            "value": undefined,
          },
          "label": "Operating System",
          "type": "checkbox",
          "value": "operating-system",
        },
        Object {
          "filterValues": Object {
            "isDisabled": false,
            "items": Array [
              Object {
                "label": "Insights",
                "value": "insights",
              },
            ],
            "onChange": [Function],
            "placeholder": "Filter by source",
            "value": Array [
              "insights",
            ],
          },
          "label": "Source",
          "type": "checkbox",
          "value": "source-registered-with",
        },
      ],
    }
  }
  filters={Array []}
  pagination={
    Object {
      "isDisabled": false,
      "itemCount": undefined,
      "onPerPageSelect": [Function],
      "onSetPage": [Function],
      "page": undefined,
      "perPage": undefined,
    }
  }
/>
`;

exports[`EntityTableToolbar DOM should render correctly - with custom activeFilters 1`] = `
<PrimaryToolbar
  activeFiltersConfig={
    Object {
      "filters": Array [
        Object {
          "category": "Status",
          "chips": Array [
            Object {
              "name": "Fresh",
              "value": "fresh",
            },
            Object {
              "name": "Stale",
              "value": "stale",
            },
          ],
          "type": "staleness",
        },
        Object {
          "category": "Source",
          "chips": Array [
            Object {
              "name": "Insights",
              "value": "insights",
            },
          ],
          "type": "registered_with",
        },
        Object {
          "category": "Some",
          "chips": Array [
            Object {
              "name": "something",
            },
            Object {
              "name": "something 2",
            },
          ],
        },
      ],
      "onDelete": [Function],
    }
  }
  className="ins-c-inventory__table--toolbar "
  filterConfig={
    Object {
      "isDisabled": false,
      "items": Array [
        Object {
          "filterValues": Object {
            "isDisabled": false,
            "onChange": [Function],
            "placeholder": "Filter by name",
            "value": "",
          },
          "label": "Name",
          "value": "name-filter",
        },
        Object {
          "filterValues": Object {
            "isDisabled": false,
            "items": Array [
              Object {
                "label": "Fresh",
                "value": "fresh",
              },
              Object {
                "label": "Stale",
                "value": "stale",
              },
              Object {
                "label": "Stale warning",
                "value": "stale_warning",
              },
            ],
            "onChange": [Function],
            "placeholder": "Filter by status",
            "value": Array [
              "fresh",
              "stale",
            ],
          },
          "label": "Status",
          "type": "checkbox",
          "value": "stale-status",
        },
        Object {
          "filterValues": Object {
            "isDisabled": false,
            "items": Array [
              Object {
                "label": "RHEL 9.0",
                "value": "9.0",
              },
              Object {
                "label": "RHEL 8.6",
                "value": "8.6",
              },
              Object {
                "label": "RHEL 8.5",
                "value": "8.5",
              },
              Object {
                "label": "RHEL 8.4",
                "value": "8.4",
              },
              Object {
                "label": "RHEL 8.3",
                "value": "8.3",
              },
              Object {
                "label": "RHEL 8.2",
                "value": "8.2",
              },
              Object {
                "label": "RHEL 8.1",
                "value": "8.1",
              },
              Object {
                "label": "RHEL 8.0",
                "value": "8.0",
              },
              Object {
                "label": "RHEL 7.9",
                "value": "7.9",
              },
              Object {
                "label": "RHEL 7.8",
                "value": "7.8",
              },
              Object {
                "label": "RHEL 7.7",
                "value": "7.7",
              },
              Object {
                "label": "RHEL 7.6",
                "value": "7.6",
              },
              Object {
                "label": "RHEL 7.5",
                "value": "7.5",
              },
              Object {
                "label": "RHEL 7.4",
                "value": "7.4",
              },
              Object {
                "label": "RHEL 7.3",
                "value": "7.3",
              },
              Object {
                "label": "RHEL 7.2",
                "value": "7.2",
              },
              Object {
                "label": "RHEL 7.1",
                "value": "7.1",
              },
              Object {
                "label": "RHEL 7.0",
                "value": "7.0",
              },
              Object {
                "label": "RHEL 6.10",
                "value": "6.10",
              },
              Object {
                "label": "RHEL 6.9",
                "value": "6.9",
              },
              Object {
                "label": "RHEL 6.8",
                "value": "6.8",
              },
              Object {
                "label": "RHEL 6.7",
                "value": "6.7",
              },
              Object {
                "label": "RHEL 6.6",
                "value": "6.6",
              },
              Object {
                "label": "RHEL 6.5",
                "value": "6.5",
              },
              Object {
                "label": "RHEL 6.4",
                "value": "6.4",
              },
              Object {
                "label": "RHEL 6.3",
                "value": "6.3",
              },
              Object {
                "label": "RHEL 6.2",
                "value": "6.2",
              },
              Object {
                "label": "RHEL 6.1",
                "value": "6.1",
              },
              Object {
                "label": "RHEL 6.0",
                "value": "6.0",
              },
            ],
            "onChange": [Function],
            "placeholder": "Filter by operating system",
            "value": undefined,
          },
          "label": "Operating System",
          "type": "checkbox",
          "value": "operating-system",
        },
        Object {
          "filterValues": Object {
            "isDisabled": false,
            "items": Array [
              Object {
                "label": "Insights",
                "value": "insights",
              },
            ],
            "onChange": [Function],
            "placeholder": "Filter by source",
            "value": Array [
              "insights",
            ],
          },
          "label": "Source",
          "type": "checkbox",
          "value": "source-registered-with",
        },
        Object {
          "filterValues": Object {
            "className": "ins-c-tagfilter",
            "filterBy": "",
            "isDisabled": false,
            "items": Array [
              Object {
                "className": "ins-c-tagfilter__tail",
                "isDisabled": true,
                "label": <span>
                   
                  <Spinner
                    size="md"
                  />
                   
                </span>,
                "value": "",
              },
            ],
            "onChange": [Function],
            "onFilter": [Function],
            "placeholder": "Filter by tags",
            "selected": Object {},
            "value": "",
          },
          "label": "Tags",
          "placeholder": "Filter system by tag",
          "type": "group",
          "value": "tags",
        },
      ],
    }
  }
  filters={Array []}
  pagination={
    Object {
      "isDisabled": false,
      "itemCount": undefined,
      "onPerPageSelect": [Function],
      "onSetPage": [Function],
      "page": undefined,
      "perPage": undefined,
    }
  }
/>
`;

exports[`EntityTableToolbar DOM should render correctly - with custom filters 1`] = `
<PrimaryToolbar
  activeFiltersConfig={
    Object {
      "filters": Array [
        Object {
          "category": "Status",
          "chips": Array [
            Object {
              "name": "Fresh",
              "value": "fresh",
            },
            Object {
              "name": "Stale",
              "value": "stale",
            },
          ],
          "type": "staleness",
        },
        Object {
          "category": "Source",
          "chips": Array [
            Object {
              "name": "Insights",
              "value": "insights",
            },
          ],
          "type": "registered_with",
        },
      ],
      "onDelete": [Function],
    }
  }
  className="ins-c-inventory__table--toolbar "
  filterConfig={
    Object {
      "isDisabled": false,
      "items": Array [
        Object {
          "filterValues": Object {
            "isDisabled": false,
            "onChange": [Function],
            "placeholder": "Filter by name",
            "value": "",
          },
          "label": "Name",
          "value": "name-filter",
        },
        Object {
          "filterValues": Object {
            "isDisabled": false,
            "items": Array [
              Object {
                "label": "Fresh",
                "value": "fresh",
              },
              Object {
                "label": "Stale",
                "value": "stale",
              },
              Object {
                "label": "Stale warning",
                "value": "stale_warning",
              },
            ],
            "onChange": [Function],
            "placeholder": "Filter by status",
            "value": Array [
              "fresh",
              "stale",
            ],
          },
          "label": "Status",
          "type": "checkbox",
          "value": "stale-status",
        },
        Object {
          "filterValues": Object {
            "isDisabled": false,
            "items": Array [
              Object {
                "label": "RHEL 9.0",
                "value": "9.0",
              },
              Object {
                "label": "RHEL 8.6",
                "value": "8.6",
              },
              Object {
                "label": "RHEL 8.5",
                "value": "8.5",
              },
              Object {
                "label": "RHEL 8.4",
                "value": "8.4",
              },
              Object {
                "label": "RHEL 8.3",
                "value": "8.3",
              },
              Object {
                "label": "RHEL 8.2",
                "value": "8.2",
              },
              Object {
                "label": "RHEL 8.1",
                "value": "8.1",
              },
              Object {
                "label": "RHEL 8.0",
                "value": "8.0",
              },
              Object {
                "label": "RHEL 7.9",
                "value": "7.9",
              },
              Object {
                "label": "RHEL 7.8",
                "value": "7.8",
              },
              Object {
                "label": "RHEL 7.7",
                "value": "7.7",
              },
              Object {
                "label": "RHEL 7.6",
                "value": "7.6",
              },
              Object {
                "label": "RHEL 7.5",
                "value": "7.5",
              },
              Object {
                "label": "RHEL 7.4",
                "value": "7.4",
              },
              Object {
                "label": "RHEL 7.3",
                "value": "7.3",
              },
              Object {
                "label": "RHEL 7.2",
                "value": "7.2",
              },
              Object {
                "label": "RHEL 7.1",
                "value": "7.1",
              },
              Object {
                "label": "RHEL 7.0",
                "value": "7.0",
              },
              Object {
                "label": "RHEL 6.10",
                "value": "6.10",
              },
              Object {
                "label": "RHEL 6.9",
                "value": "6.9",
              },
              Object {
                "label": "RHEL 6.8",
                "value": "6.8",
              },
              Object {
                "label": "RHEL 6.7",
                "value": "6.7",
              },
              Object {
                "label": "RHEL 6.6",
                "value": "6.6",
              },
              Object {
                "label": "RHEL 6.5",
                "value": "6.5",
              },
              Object {
                "label": "RHEL 6.4",
                "value": "6.4",
              },
              Object {
                "label": "RHEL 6.3",
                "value": "6.3",
              },
              Object {
                "label": "RHEL 6.2",
                "value": "6.2",
              },
              Object {
                "label": "RHEL 6.1",
                "value": "6.1",
              },
              Object {
                "label": "RHEL 6.0",
                "value": "6.0",
              },
            ],
            "onChange": [Function],
            "placeholder": "Filter by operating system",
            "value": undefined,
          },
          "label": "Operating System",
          "type": "checkbox",
          "value": "operating-system",
        },
        Object {
          "filterValues": Object {
            "isDisabled": false,
            "items": Array [
              Object {
                "label": "Insights",
                "value": "insights",
              },
            ],
            "onChange": [Function],
            "placeholder": "Filter by source",
            "value": Array [
              "insights",
            ],
          },
          "label": "Source",
          "type": "checkbox",
          "value": "source-registered-with",
        },
        Object {
          "filterValues": Object {
            "isDisabled": false,
            "placeholder": "Filter by filter by text",
          },
          "label": "Filter by text",
        },
      ],
    }
  }
  filters={Array []}
  pagination={
    Object {
      "isDisabled": false,
      "itemCount": undefined,
      "onPerPageSelect": [Function],
      "onSetPage": [Function],
      "page": undefined,
      "perPage": undefined,
    }
  }
/>
`;

exports[`EntityTableToolbar DOM should render correctly - with default filters 1`] = `
<PrimaryToolbar
  activeFiltersConfig={
    Object {
      "filters": Array [
        Object {
          "category": "Status",
          "chips": Array [
            Object {
              "name": "Fresh",
              "value": "fresh",
            },
          ],
          "type": "staleness",
        },
        Object {
          "category": "Source",
          "chips": Array [
            Object {
              "name": "Insights",
              "value": "insights",
            },
          ],
          "type": "registered_with",
        },
      ],
      "onDelete": [Function],
    }
  }
  className="ins-c-inventory__table--toolbar "
  filterConfig={
    Object {
      "isDisabled": false,
      "items": Array [
        Object {
          "filterValues": Object {
            "isDisabled": false,
            "onChange": [Function],
            "placeholder": "Filter by name",
            "value": "",
          },
          "label": "Name",
          "value": "name-filter",
        },
        Object {
          "filterValues": Object {
            "isDisabled": false,
            "items": Array [
              Object {
                "label": "Fresh",
                "value": "fresh",
              },
              Object {
                "label": "Stale",
                "value": "stale",
              },
              Object {
                "label": "Stale warning",
                "value": "stale_warning",
              },
            ],
            "onChange": [Function],
            "placeholder": "Filter by status",
            "value": Array [
              "fresh",
            ],
          },
          "label": "Status",
          "type": "checkbox",
          "value": "stale-status",
        },
        Object {
          "filterValues": Object {
            "isDisabled": false,
            "items": Array [
              Object {
                "label": "RHEL 9.0",
                "value": "9.0",
              },
              Object {
                "label": "RHEL 8.6",
                "value": "8.6",
              },
              Object {
                "label": "RHEL 8.5",
                "value": "8.5",
              },
              Object {
                "label": "RHEL 8.4",
                "value": "8.4",
              },
              Object {
                "label": "RHEL 8.3",
                "value": "8.3",
              },
              Object {
                "label": "RHEL 8.2",
                "value": "8.2",
              },
              Object {
                "label": "RHEL 8.1",
                "value": "8.1",
              },
              Object {
                "label": "RHEL 8.0",
                "value": "8.0",
              },
              Object {
                "label": "RHEL 7.9",
                "value": "7.9",
              },
              Object {
                "label": "RHEL 7.8",
                "value": "7.8",
              },
              Object {
                "label": "RHEL 7.7",
                "value": "7.7",
              },
              Object {
                "label": "RHEL 7.6",
                "value": "7.6",
              },
              Object {
                "label": "RHEL 7.5",
                "value": "7.5",
              },
              Object {
                "label": "RHEL 7.4",
                "value": "7.4",
              },
              Object {
                "label": "RHEL 7.3",
                "value": "7.3",
              },
              Object {
                "label": "RHEL 7.2",
                "value": "7.2",
              },
              Object {
                "label": "RHEL 7.1",
                "value": "7.1",
              },
              Object {
                "label": "RHEL 7.0",
                "value": "7.0",
              },
              Object {
                "label": "RHEL 6.10",
                "value": "6.10",
              },
              Object {
                "label": "RHEL 6.9",
                "value": "6.9",
              },
              Object {
                "label": "RHEL 6.8",
                "value": "6.8",
              },
              Object {
                "label": "RHEL 6.7",
                "value": "6.7",
              },
              Object {
                "label": "RHEL 6.6",
                "value": "6.6",
              },
              Object {
                "label": "RHEL 6.5",
                "value": "6.5",
              },
              Object {
                "label": "RHEL 6.4",
                "value": "6.4",
              },
              Object {
                "label": "RHEL 6.3",
                "value": "6.3",
              },
              Object {
                "label": "RHEL 6.2",
                "value": "6.2",
              },
              Object {
                "label": "RHEL 6.1",
                "value": "6.1",
              },
              Object {
                "label": "RHEL 6.0",
                "value": "6.0",
              },
            ],
            "onChange": [Function],
            "placeholder": "Filter by operating system",
            "value": undefined,
          },
          "label": "Operating System",
          "type": "checkbox",
          "value": "operating-system",
        },
        Object {
          "filterValues": Object {
            "isDisabled": false,
            "items": Array [
              Object {
                "label": "Insights",
                "value": "insights",
              },
            ],
            "onChange": [Function],
            "placeholder": "Filter by source",
            "value": Array [
              "insights",
            ],
          },
          "label": "Source",
          "type": "checkbox",
          "value": "source-registered-with",
        },
      ],
    }
  }
  filters={Array []}
  pagination={
    Object {
      "isDisabled": false,
      "itemCount": undefined,
      "onPerPageSelect": [Function],
      "onSetPage": [Function],
      "page": undefined,
      "perPage": undefined,
    }
  }
/>
`;

exports[`EntityTableToolbar DOM should render correctly - with default tag filter 1`] = `
<PrimaryToolbar
  activeFiltersConfig={
    Object {
      "filters": Array [
        Object {
          "category": "Status",
          "chips": Array [
            Object {
              "name": "Fresh",
              "value": "fresh",
            },
            Object {
              "name": "Stale",
              "value": "stale",
            },
          ],
          "type": "staleness",
        },
        Object {
          "category": "Source",
          "chips": Array [
            Object {
              "name": "Insights",
              "value": "insights",
            },
          ],
          "type": "registered_with",
        },
      ],
      "onDelete": [Function],
    }
  }
  className="ins-c-inventory__table--toolbar "
  filterConfig={
    Object {
      "isDisabled": false,
      "items": Array [
        Object {
          "filterValues": Object {
            "isDisabled": false,
            "onChange": [Function],
            "placeholder": "Filter by name",
            "value": "",
          },
          "label": "Name",
          "value": "name-filter",
        },
        Object {
          "filterValues": Object {
            "isDisabled": false,
            "items": Array [
              Object {
                "label": "Fresh",
                "value": "fresh",
              },
              Object {
                "label": "Stale",
                "value": "stale",
              },
              Object {
                "label": "Stale warning",
                "value": "stale_warning",
              },
            ],
            "onChange": [Function],
            "placeholder": "Filter by status",
            "value": Array [
              "fresh",
              "stale",
            ],
          },
          "label": "Status",
          "type": "checkbox",
          "value": "stale-status",
        },
        Object {
          "filterValues": Object {
            "isDisabled": false,
            "items": Array [
              Object {
                "label": "RHEL 9.0",
                "value": "9.0",
              },
              Object {
                "label": "RHEL 8.6",
                "value": "8.6",
              },
              Object {
                "label": "RHEL 8.5",
                "value": "8.5",
              },
              Object {
                "label": "RHEL 8.4",
                "value": "8.4",
              },
              Object {
                "label": "RHEL 8.3",
                "value": "8.3",
              },
              Object {
                "label": "RHEL 8.2",
                "value": "8.2",
              },
              Object {
                "label": "RHEL 8.1",
                "value": "8.1",
              },
              Object {
                "label": "RHEL 8.0",
                "value": "8.0",
              },
              Object {
                "label": "RHEL 7.9",
                "value": "7.9",
              },
              Object {
                "label": "RHEL 7.8",
                "value": "7.8",
              },
              Object {
                "label": "RHEL 7.7",
                "value": "7.7",
              },
              Object {
                "label": "RHEL 7.6",
                "value": "7.6",
              },
              Object {
                "label": "RHEL 7.5",
                "value": "7.5",
              },
              Object {
                "label": "RHEL 7.4",
                "value": "7.4",
              },
              Object {
                "label": "RHEL 7.3",
                "value": "7.3",
              },
              Object {
                "label": "RHEL 7.2",
                "value": "7.2",
              },
              Object {
                "label": "RHEL 7.1",
                "value": "7.1",
              },
              Object {
                "label": "RHEL 7.0",
                "value": "7.0",
              },
              Object {
                "label": "RHEL 6.10",
                "value": "6.10",
              },
              Object {
                "label": "RHEL 6.9",
                "value": "6.9",
              },
              Object {
                "label": "RHEL 6.8",
                "value": "6.8",
              },
              Object {
                "label": "RHEL 6.7",
                "value": "6.7",
              },
              Object {
                "label": "RHEL 6.6",
                "value": "6.6",
              },
              Object {
                "label": "RHEL 6.5",
                "value": "6.5",
              },
              Object {
                "label": "RHEL 6.4",
                "value": "6.4",
              },
              Object {
                "label": "RHEL 6.3",
                "value": "6.3",
              },
              Object {
                "label": "RHEL 6.2",
                "value": "6.2",
              },
              Object {
                "label": "RHEL 6.1",
                "value": "6.1",
              },
              Object {
                "label": "RHEL 6.0",
                "value": "6.0",
              },
            ],
            "onChange": [Function],
            "placeholder": "Filter by operating system",
            "value": undefined,
          },
          "label": "Operating System",
          "type": "checkbox",
          "value": "operating-system",
        },
        Object {
          "filterValues": Object {
            "isDisabled": false,
            "items": Array [
              Object {
                "label": "Insights",
                "value": "insights",
              },
            ],
            "onChange": [Function],
            "placeholder": "Filter by source",
            "value": Array [
              "insights",
            ],
          },
          "label": "Source",
          "type": "checkbox",
          "value": "source-registered-with",
        },
      ],
    }
  }
  filters={Array []}
  pagination={
    Object {
      "isDisabled": false,
      "itemCount": undefined,
      "onPerPageSelect": [Function],
      "onSetPage": [Function],
      "page": undefined,
      "perPage": undefined,
    }
  }
/>
`;

exports[`EntityTableToolbar DOM should render correctly - with items 1`] = `
<PrimaryToolbar
  activeFiltersConfig={
    Object {
      "filters": Array [],
      "onDelete": [Function],
    }
  }
  className="ins-c-inventory__table--toolbar ins-c-inventory__table--toolbar-has-items"
  filters={Array []}
  pagination={
    Object {
      "isDisabled": false,
      "itemCount": undefined,
      "onPerPageSelect": [Function],
      "onSetPage": [Function],
      "page": undefined,
      "perPage": undefined,
    }
  }
/>
`;

exports[`EntityTableToolbar DOM should render correctly - with no access 1`] = `
<PrimaryToolbar
  className="ins-c-inventory__table--toolbar "
  filterConfig={
    Object {
      "isDisabled": true,
      "items": Array [
        Object {
          "filterValues": Object {
            "isDisabled": true,
            "onChange": [Function],
            "placeholder": "Filter by name",
            "value": "",
          },
          "label": "Name",
          "value": "name-filter",
        },
        Object {
          "filterValues": Object {
            "isDisabled": true,
            "items": Array [
              Object {
                "label": "Fresh",
                "value": "fresh",
              },
              Object {
                "label": "Stale",
                "value": "stale",
              },
              Object {
                "label": "Stale warning",
                "value": "stale_warning",
              },
            ],
            "onChange": [Function],
            "placeholder": "Filter by status",
            "value": Array [
              "fresh",
              "stale",
            ],
          },
          "label": "Status",
          "type": "checkbox",
          "value": "stale-status",
        },
        Object {
          "filterValues": Object {
            "isDisabled": true,
            "items": Array [
              Object {
                "label": "RHEL 9.0",
                "value": "9.0",
              },
              Object {
                "label": "RHEL 8.6",
                "value": "8.6",
              },
              Object {
                "label": "RHEL 8.5",
                "value": "8.5",
              },
              Object {
                "label": "RHEL 8.4",
                "value": "8.4",
              },
              Object {
                "label": "RHEL 8.3",
                "value": "8.3",
              },
              Object {
                "label": "RHEL 8.2",
                "value": "8.2",
              },
              Object {
                "label": "RHEL 8.1",
                "value": "8.1",
              },
              Object {
                "label": "RHEL 8.0",
                "value": "8.0",
              },
              Object {
                "label": "RHEL 7.9",
                "value": "7.9",
              },
              Object {
                "label": "RHEL 7.8",
                "value": "7.8",
              },
              Object {
                "label": "RHEL 7.7",
                "value": "7.7",
              },
              Object {
                "label": "RHEL 7.6",
                "value": "7.6",
              },
              Object {
                "label": "RHEL 7.5",
                "value": "7.5",
              },
              Object {
                "label": "RHEL 7.4",
                "value": "7.4",
              },
              Object {
                "label": "RHEL 7.3",
                "value": "7.3",
              },
              Object {
                "label": "RHEL 7.2",
                "value": "7.2",
              },
              Object {
                "label": "RHEL 7.1",
                "value": "7.1",
              },
              Object {
                "label": "RHEL 7.0",
                "value": "7.0",
              },
              Object {
                "label": "RHEL 6.10",
                "value": "6.10",
              },
              Object {
                "label": "RHEL 6.9",
                "value": "6.9",
              },
              Object {
                "label": "RHEL 6.8",
                "value": "6.8",
              },
              Object {
                "label": "RHEL 6.7",
                "value": "6.7",
              },
              Object {
                "label": "RHEL 6.6",
                "value": "6.6",
              },
              Object {
                "label": "RHEL 6.5",
                "value": "6.5",
              },
              Object {
                "label": "RHEL 6.4",
                "value": "6.4",
              },
              Object {
                "label": "RHEL 6.3",
                "value": "6.3",
              },
              Object {
                "label": "RHEL 6.2",
                "value": "6.2",
              },
              Object {
                "label": "RHEL 6.1",
                "value": "6.1",
              },
              Object {
                "label": "RHEL 6.0",
                "value": "6.0",
              },
            ],
            "onChange": [Function],
            "placeholder": "Filter by operating system",
            "value": undefined,
          },
          "label": "Operating System",
          "type": "checkbox",
          "value": "operating-system",
        },
        Object {
          "filterValues": Object {
            "isDisabled": true,
            "items": Array [
              Object {
                "label": "Insights",
                "value": "insights",
              },
            ],
            "onChange": [Function],
            "placeholder": "Filter by source",
            "value": Array [
              "insights",
            ],
          },
          "label": "Source",
          "type": "checkbox",
          "value": "source-registered-with",
        },
      ],
    }
  }
  filters={Array []}
  pagination={
    Object {
      "isDisabled": true,
      "itemCount": 0,
      "onPerPageSelect": [Function],
      "onSetPage": [Function],
      "page": undefined,
      "perPage": undefined,
    }
  }
/>
`;

exports[`EntityTableToolbar DOM should render correctly - with no access 2`] = `
<TagsModal
  filterTagsBy=""
  onApply={[Function]}
  onToggleModal={[Function]}
/>
`;

exports[`EntityTableToolbar DOM should render correctly - with tags 1`] = `
<PrimaryToolbar
  activeFiltersConfig={
    Object {
      "filters": Array [
        Object {
          "category": "Status",
          "chips": Array [
            Object {
              "name": "Fresh",
              "value": "fresh",
            },
            Object {
              "name": "Stale",
              "value": "stale",
            },
          ],
          "type": "staleness",
        },
        Object {
          "category": "Source",
          "chips": Array [
            Object {
              "name": "Insights",
              "value": "insights",
            },
          ],
          "type": "registered_with",
        },
      ],
      "onDelete": [Function],
    }
  }
  className="ins-c-inventory__table--toolbar "
  filterConfig={
    Object {
      "isDisabled": false,
      "items": Array [
        Object {
          "filterValues": Object {
            "isDisabled": false,
            "onChange": [Function],
            "placeholder": "Filter by name",
            "value": "",
          },
          "label": "Name",
          "value": "name-filter",
        },
        Object {
          "filterValues": Object {
            "isDisabled": false,
            "items": Array [
              Object {
                "label": "Fresh",
                "value": "fresh",
              },
              Object {
                "label": "Stale",
                "value": "stale",
              },
              Object {
                "label": "Stale warning",
                "value": "stale_warning",
              },
            ],
            "onChange": [Function],
            "placeholder": "Filter by status",
            "value": Array [
              "fresh",
              "stale",
            ],
          },
          "label": "Status",
          "type": "checkbox",
          "value": "stale-status",
        },
        Object {
          "filterValues": Object {
            "isDisabled": false,
            "items": Array [
              Object {
                "label": "RHEL 9.0",
                "value": "9.0",
              },
              Object {
                "label": "RHEL 8.6",
                "value": "8.6",
              },
              Object {
                "label": "RHEL 8.5",
                "value": "8.5",
              },
              Object {
                "label": "RHEL 8.4",
                "value": "8.4",
              },
              Object {
                "label": "RHEL 8.3",
                "value": "8.3",
              },
              Object {
                "label": "RHEL 8.2",
                "value": "8.2",
              },
              Object {
                "label": "RHEL 8.1",
                "value": "8.1",
              },
              Object {
                "label": "RHEL 8.0",
                "value": "8.0",
              },
              Object {
                "label": "RHEL 7.9",
                "value": "7.9",
              },
              Object {
                "label": "RHEL 7.8",
                "value": "7.8",
              },
              Object {
                "label": "RHEL 7.7",
                "value": "7.7",
              },
              Object {
                "label": "RHEL 7.6",
                "value": "7.6",
              },
              Object {
                "label": "RHEL 7.5",
                "value": "7.5",
              },
              Object {
                "label": "RHEL 7.4",
                "value": "7.4",
              },
              Object {
                "label": "RHEL 7.3",
                "value": "7.3",
              },
              Object {
                "label": "RHEL 7.2",
                "value": "7.2",
              },
              Object {
                "label": "RHEL 7.1",
                "value": "7.1",
              },
              Object {
                "label": "RHEL 7.0",
                "value": "7.0",
              },
              Object {
                "label": "RHEL 6.10",
                "value": "6.10",
              },
              Object {
                "label": "RHEL 6.9",
                "value": "6.9",
              },
              Object {
                "label": "RHEL 6.8",
                "value": "6.8",
              },
              Object {
                "label": "RHEL 6.7",
                "value": "6.7",
              },
              Object {
                "label": "RHEL 6.6",
                "value": "6.6",
              },
              Object {
                "label": "RHEL 6.5",
                "value": "6.5",
              },
              Object {
                "label": "RHEL 6.4",
                "value": "6.4",
              },
              Object {
                "label": "RHEL 6.3",
                "value": "6.3",
              },
              Object {
                "label": "RHEL 6.2",
                "value": "6.2",
              },
              Object {
                "label": "RHEL 6.1",
                "value": "6.1",
              },
              Object {
                "label": "RHEL 6.0",
                "value": "6.0",
              },
            ],
            "onChange": [Function],
            "placeholder": "Filter by operating system",
            "value": undefined,
          },
          "label": "Operating System",
          "type": "checkbox",
          "value": "operating-system",
        },
        Object {
          "filterValues": Object {
            "isDisabled": false,
            "items": Array [
              Object {
                "label": "Insights",
                "value": "insights",
              },
            ],
            "onChange": [Function],
            "placeholder": "Filter by source",
            "value": Array [
              "insights",
            ],
          },
          "label": "Source",
          "type": "checkbox",
          "value": "source-registered-with",
        },
        Object {
          "filterValues": Object {
            "className": "ins-c-tagfilter",
            "filterBy": "",
            "isDisabled": false,
            "items": Array [
              Object {
                "className": "ins-c-tagfilter__tail",
                "isDisabled": true,
                "label": <span>
                   
                  <Spinner
                    size="md"
                  />
                   
                </span>,
                "value": "",
              },
            ],
            "onChange": [Function],
            "onFilter": [Function],
            "placeholder": "Filter by tags",
            "selected": Object {},
            "value": "",
          },
          "label": "Tags",
          "placeholder": "Filter system by tag",
          "type": "group",
          "value": "tags",
        },
      ],
    }
  }
  filters={Array []}
  pagination={
    Object {
      "isDisabled": false,
      "itemCount": undefined,
      "onPerPageSelect": [Function],
      "onSetPage": [Function],
      "page": undefined,
      "perPage": undefined,
    }
  }
/>
`;

exports[`EntityTableToolbar DOM should render correctly - with tags 2`] = `
<TagsModal
  filterTagsBy=""
  onApply={[Function]}
  onToggleModal={[Function]}
/>
`;

exports[`EntityTableToolbar DOM should render correctly 1`] = `
<PrimaryToolbar
  activeFiltersConfig={
    Object {
      "filters": Array [
        Object {
          "category": "Status",
          "chips": Array [
            Object {
              "name": "Fresh",
              "value": "fresh",
            },
            Object {
              "name": "Stale",
              "value": "stale",
            },
          ],
          "type": "staleness",
        },
        Object {
          "category": "Source",
          "chips": Array [
            Object {
              "name": "Insights",
              "value": "insights",
            },
          ],
          "type": "registered_with",
        },
      ],
      "onDelete": [Function],
    }
  }
  className="ins-c-inventory__table--toolbar "
  filterConfig={
    Object {
      "isDisabled": false,
      "items": Array [
        Object {
          "filterValues": Object {
            "isDisabled": false,
            "onChange": [Function],
            "placeholder": "Filter by name",
            "value": "",
          },
          "label": "Name",
          "value": "name-filter",
        },
        Object {
          "filterValues": Object {
            "isDisabled": false,
            "items": Array [
              Object {
                "label": "Fresh",
                "value": "fresh",
              },
              Object {
                "label": "Stale",
                "value": "stale",
              },
              Object {
                "label": "Stale warning",
                "value": "stale_warning",
              },
            ],
            "onChange": [Function],
            "placeholder": "Filter by status",
            "value": Array [
              "fresh",
              "stale",
            ],
          },
          "label": "Status",
          "type": "checkbox",
          "value": "stale-status",
        },
        Object {
          "filterValues": Object {
            "isDisabled": false,
            "items": Array [
              Object {
                "label": "RHEL 9.0",
                "value": "9.0",
              },
              Object {
                "label": "RHEL 8.6",
                "value": "8.6",
              },
              Object {
                "label": "RHEL 8.5",
                "value": "8.5",
              },
              Object {
                "label": "RHEL 8.4",
                "value": "8.4",
              },
              Object {
                "label": "RHEL 8.3",
                "value": "8.3",
              },
              Object {
                "label": "RHEL 8.2",
                "value": "8.2",
              },
              Object {
                "label": "RHEL 8.1",
                "value": "8.1",
              },
              Object {
                "label": "RHEL 8.0",
                "value": "8.0",
              },
              Object {
                "label": "RHEL 7.9",
                "value": "7.9",
              },
              Object {
                "label": "RHEL 7.8",
                "value": "7.8",
              },
              Object {
                "label": "RHEL 7.7",
                "value": "7.7",
              },
              Object {
                "label": "RHEL 7.6",
                "value": "7.6",
              },
              Object {
                "label": "RHEL 7.5",
                "value": "7.5",
              },
              Object {
                "label": "RHEL 7.4",
                "value": "7.4",
              },
              Object {
                "label": "RHEL 7.3",
                "value": "7.3",
              },
              Object {
                "label": "RHEL 7.2",
                "value": "7.2",
              },
              Object {
                "label": "RHEL 7.1",
                "value": "7.1",
              },
              Object {
                "label": "RHEL 7.0",
                "value": "7.0",
              },
              Object {
                "label": "RHEL 6.10",
                "value": "6.10",
              },
              Object {
                "label": "RHEL 6.9",
                "value": "6.9",
              },
              Object {
                "label": "RHEL 6.8",
                "value": "6.8",
              },
              Object {
                "label": "RHEL 6.7",
                "value": "6.7",
              },
              Object {
                "label": "RHEL 6.6",
                "value": "6.6",
              },
              Object {
                "label": "RHEL 6.5",
                "value": "6.5",
              },
              Object {
                "label": "RHEL 6.4",
                "value": "6.4",
              },
              Object {
                "label": "RHEL 6.3",
                "value": "6.3",
              },
              Object {
                "label": "RHEL 6.2",
                "value": "6.2",
              },
              Object {
                "label": "RHEL 6.1",
                "value": "6.1",
              },
              Object {
                "label": "RHEL 6.0",
                "value": "6.0",
              },
            ],
            "onChange": [Function],
            "placeholder": "Filter by operating system",
            "value": undefined,
          },
          "label": "Operating System",
          "type": "checkbox",
          "value": "operating-system",
        },
        Object {
          "filterValues": Object {
            "isDisabled": false,
            "items": Array [
              Object {
                "label": "Insights",
                "value": "insights",
              },
            ],
            "onChange": [Function],
            "placeholder": "Filter by source",
            "value": Array [
              "insights",
            ],
          },
          "label": "Source",
          "type": "checkbox",
          "value": "source-registered-with",
        },
      ],
    }
  }
  filters={Array []}
  pagination={
    Object {
      "isDisabled": false,
      "itemCount": 500,
      "onPerPageSelect": [Function],
      "onSetPage": [Function],
      "page": 1,
      "perPage": 50,
    }
  }
/>
`;
